[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proxycycle"
version = "1.0.1"
description = "A Library to easily load/fetch proxy servers."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Vbrawl", email = "greninjagr@gmail.com" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["requests"]

[project.urls]
Documentation = "https://github.com/Vbrawl/proxycycle#readme"
Issues = "https://github.com/Vbrawl/proxycycle/issues"
Source = "https://github.com/Vbrawl/proxycycle"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/proxycycle tests}"

[tool.coverage.run]
source_pkgs = ["proxycycle", "tests"]
branch = true
parallel = true
omit = [
  "src/proxycycle/__about__.py",
]

[tool.coverage.paths]
proxycycle = ["src/proxycycle", "*/proxycycle/src/proxycycle"]
tests = ["tests", "*/proxycycle/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
